Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "Attribute 4",
     "attribute-values": "Attribute values",
     "attributes": "Attributes",
+    "audio": "Audio",
     "august": "August",
     "auth-token-invalid": "Invalid auth token",
     "authentication": "Authentication",
@@ -162,6 +163,7 @@
     "book": "Reserve",
     "box-closed-ok": "Box closed ok",
     "boxes": "Boxes",
+    "browse": "Search",
     "business-name": "Business name",
     "buy": "Buy",
     "cache": "Cache",
@@ -208,6 +210,7 @@
     "channel": "Channel",
     "chart": "Chart",
     "charts": "Charts",
+    "chat": "Chat",
     "check-table": "Error checking table '%tableName%'",
     "check-vies": "Check VIES",
     "checked": "Checked",
@@ -216,6 +219,7 @@
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
     "choose-employee": "Choose employee",
+    "choose-files": "Select files",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Choose serie",
     "choose-source": "Choose source",
@@ -566,10 +570,13 @@
     "field-required": "Field required: %field%",
     "fields": "Fields",
     "file": "File",
+    "file-extension-not-accepted": "Failed to send file %fileName% because its extension is not allowed. The allowed extensions are: %accepted%",
     "file-name": "File name",
     "file-not-exists": "File not exists: %fileName%",
     "file-not-found": "File %fileName% not found.",
     "file-not-supported": "File not supported",
+    "file-size-error": "Failed to send file %fileName% because it exceeds the maximum allowed size of %maxSize% MB",
+    "file-type-error": "Error sending file of type%typeFile%. Supported types are: audio, document, image, and video.",
     "file-yet-exists": "File yet exists: %filePath%",
     "filecache-clear": "Filecache cleared.",
     "filecache-delete-key-item": "Deleted element '%item%' from Filecache.",
@@ -663,6 +670,7 @@
     "group-by-year": "Group by year",
     "group-by-year-unixtime": "Group by year (unixtime)",
     "group-more-docs-p": "If you wish you can group together with other documents of this client \/ supplier",
+    "group-name": "Group name",
     "group-or-split": "Group or split",
     "group-or-split-p": "This wizard allows you to generate a new document from the lines of others. Select the quantities you want to use, the date of the new document and press the generate button.",
     "grouping-type": "Group",
@@ -772,6 +780,7 @@
     "july": "July",
     "june": "June",
     "justified": "Justified",
+    "key-google-maps": "Google Maps Key",
     "keys": "keys",
     "lang-code": "Language code",
     "language": "Language",
@@ -815,6 +824,7 @@
     "last-week": "Last week",
     "last-year": "Last year",
     "latitude": "Latitude",
+    "latitude-abb": "Lat",
     "ledger": "Ledger",
     "left": "Left",
     "level": "Level",
@@ -856,6 +866,7 @@
     "logs": "Logs",
     "long": "Long",
     "longitude": "Longitude",
+    "longitude-abb": "Long",
     "look-for-gaps": "Look for gaps",
     "lot": "Lot",
     "low-security": "Low security",
@@ -910,6 +921,7 @@
     "missing-file": "Missing file",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "Mobile",
+    "model": "Model",
     "model-not-found": "Model not found: %model%",
     "monday": "Monday",
     "month": "Month",
@@ -985,6 +997,7 @@
     "notes": "Notes",
     "notice": "Notice",
     "notices": "Notices",
+    "notification": "Notification",
     "notifications": "Notifications",
     "november": "November",
     "number": "Number",
@@ -1166,6 +1179,8 @@
     "rates": "Rates",
     "re": "RE",
     "re-open": "Reopen",
+    "react": "React",
+    "read-message-by": "Read by %nick% on %date%",
     "read-more": "Read more",
     "readonly": "Read only",
     "rebuild": "Rebuild",
@@ -1227,6 +1242,7 @@
     "reserved": "Reserved",
     "reset": "Reset",
     "resource": "Resource",
+    "respond": "Reply",
     "restore": "Restore",
     "restore-data": "Restore data",
     "result": "Result",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "Selected Qty",
     "selector-number": "Selector",
     "send": "Send",
+    "send-audios": "Send audio",
+    "send-documents": "Send documents",
+    "send-images": "Send images",
     "send-invoices": "Send invoices",
+    "send-location": "Send location",
     "send-mail": "Send mail",
     "send-mail-error": "Error when sending the email",
     "send-mail-ok": "Email sent correctly",
+    "send-videos": "Send videos",
+    "sent-a-audio": "Sent a sound",
+    "sent-a-document": "Sent a document",
+    "sent-a-location": "Sent a location",
+    "sent-a-picture": "Sent a picture",
+    "sent-a-video": "Sent a video",
+    "sent-message-by": "Sent by %nick% on %date%",
     "sepa-suffix": "SEPA suffix",
     "september": "September",
     "sequences": "Sequences",
@@ -1514,6 +1541,7 @@
     "vehicle": "Vehicle",
     "verified": "Verified",
     "version": "Version",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "See subtotal or net column",
     "warehouse": "Warehouse",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
     "working-hours": "Work schedule",
+    "write-a-message-here": "Write a message here",
     "x-column": "X column",
     "x-operation": "X operation",
     "y-column": "Y column",
@@ -1551,6 +1580,11 @@
     "yes": "Yes",
     "yesterday": "Yesterday",
     "you-cant-delete-primary-variant": "You cannot delete the main variant of the product",
+    "you-sent-a-audio": "You sent a sound",
+    "you-sent-a-document": "You sent a document",
+    "you-sent-a-location": "You sent a location",
+    "you-sent-a-picture": "You sent a picture",
+    "you-sent-a-video": "You sent a video",
     "you-should-change-passwd": "You should change your password",
     "your": "Your",
     "zip-code": "Zip code",
