--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "Atributo 4",
     "attribute-values": "Valores de atributo",
     "attributes": "Atributos",
+    "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Clave de API no válida",
     "authentication": "Autenticación",
@@ -162,6 +163,7 @@
     "book": "Reservar",
     "box-closed-ok": "Caja cerrada correctamente",
     "boxes": "Cajas",
+    "browse": "Examinar",
     "business-name": "Razón Social",
     "buy": "Comprar",
     "cache": "Caché",
@@ -208,6 +210,7 @@
     "channel": "Canal",
     "chart": "Gráfico",
     "charts": "Gráficos",
+    "chat": "Chat",
     "check-table": "Error al comprobar la tabla '%tableName%'",
     "check-vies": "Comprobar VIES",
     "checked": "Comprobado",
@@ -216,6 +219,7 @@
     "choose-currency": "Elige divisa",
     "choose-doc-type": "Seleccionar el tipo de documento",
     "choose-employee": "Elige empleado",
+    "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Elige forma de pago",
     "choose-serie": "Elige serie",
     "choose-source": "Elegir el origen",
@@ -566,10 +570,13 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Archivo",
+    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nombre de archivo",
     "file-not-exists": "No existe el archivo: %fileName%",
     "file-not-found": "Archivo %fileName% no encontrado.",
     "file-not-supported": "Archivo no soportado",
+    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "Ya existe el archivo: %filePath%",
     "filecache-clear": "Filecache limpiada.",
     "filecache-delete-key-item": "Eliminado elemento '%item%' de Filecache.",
@@ -663,6 +670,7 @@
     "group-by-year": "Agrupar por año",
     "group-by-year-unixtime": "Agrupar por año (unixtime)",
     "group-more-docs-p": "Si lo deseas puedes agrupar junto a otros documentos de este cliente\/proveedor",
+    "group-name": "Nombre del Grupo",
     "group-or-split": "Agrupar o partir",
     "group-or-split-p": "Este asistente permite generar un nuevo documento a partir de las líneas de otros. Seleccione las cantidades que desea usar, la fecha del nuevo documento y pulse el botón generar.",
     "grouping-type": "Agrupación",
@@ -772,6 +780,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "Justificado",
+    "key-google-maps": "Clave de Google Maps",
     "keys": "Claves",
     "lang-code": "Código de idioma",
     "language": "Idioma",
@@ -815,6 +824,7 @@
     "last-week": "La semana pasada",
     "last-year": "El año pasado",
     "latitude": "Latitud",
+    "latitude-abb": "Lat",
     "ledger": "Diario",
     "left": "Izquierda",
     "level": "Nivel",
@@ -856,6 +866,7 @@
     "logs": "Logs",
     "long": "Largo",
     "longitude": "Longitud",
+    "longitude-abb": "Long",
     "look-for-gaps": "Buscar huecos",
     "lot": "Lote",
     "low-security": "Baja seguridad",
@@ -910,6 +921,7 @@
     "missing-file": "Falta el archivo",
     "missing-file-help": "Parece que este archivo no se encuentra en tu instalación. Quizás no lo uses, pero <em>no puedes eliminarlo<\/em>.",
     "mobile": "Móbil",
+    "model": "Modelo",
     "model-not-found": "Modelo no encontrado: %model%",
     "monday": "Lunes",
     "month": "Mes",
@@ -985,6 +997,7 @@
     "notes": "Notas",
     "notice": "Aviso",
     "notices": "Avisos",
+    "notification": "Notificación",
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
@@ -1166,6 +1179,8 @@
     "rates": "Tarifas",
     "re": "RE",
     "re-open": "Reabrir",
+    "react": "Reaccionar",
+    "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Sólo lectura",
     "rebuild": "Reconstruir",
@@ -1227,6 +1242,7 @@
     "reserved": "Reservado",
     "reset": "Configuración reiniciada correctamente.",
     "resource": "Recurso",
+    "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
     "result": "Resultado",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "Cant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-audios": "Enviar audios",
+    "send-documents": "Enviar documentos",
+    "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
+    "send-location": "Enviar ubicación",
     "send-mail": "Enviar correo",
     "send-mail-error": "Error al enviar el correo",
     "send-mail-ok": "Correo enviado correctamente",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Envió un audio",
+    "sent-a-document": "Envió un documento",
+    "sent-a-location": "Envió una ubicación",
+    "sent-a-picture": "Envió una imagen",
+    "sent-a-video": "Envió un video",
+    "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "Sufijo SEPA",
     "september": "Septiembre",
     "sequences": "Secuencias",
@@ -1514,6 +1541,7 @@
     "vehicle": "Vehículo",
     "verified": "Verificado",
     "version": "Versión",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Almacén",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
     "working-hours": "Horario de trabajo",
+    "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
     "y-column": "Columna Y",
@@ -1551,6 +1580,11 @@
     "yes": "Si",
     "yesterday": "Ayer",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Debería cambiar su contraseña",
     "your": "Suyo",
     "zip-code": "Código Postal",
