--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "Valeur d'attribut 4",
     "attribute-values": "Valeur d'attribut",
     "attributes": "Les attributs",
+    "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "Authentification",
@@ -162,6 +163,7 @@
     "book": "Réserve",
     "box-closed-ok": "Boîte fermée correctement",
     "boxes": "Boîtes",
+    "browse": "Examinar",
     "business-name": "Nom de l'entreprise",
     "buy": "Acheter",
     "cache": "Cache",
@@ -208,6 +210,7 @@
     "channel": "canal",
     "chart": "Graphique",
     "charts": "Graphiques",
+    "chat": "Chat",
     "check-table": "Erreur lors de la vérification de la table '%tableName%'",
     "check-vies": "Comprobar VIES",
     "checked": "Vérifié",
@@ -216,6 +219,7 @@
     "choose-currency": "Choisissez la devise",
     "choose-doc-type": "Sélectionnez le type de document",
     "choose-employee": "Choisissez un employé",
+    "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Choisissez le mode de paiement",
     "choose-serie": "Choisissez une série",
     "choose-source": "Choisissez l'origine",
@@ -566,10 +570,13 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Fichier",
+    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nom du fichier",
     "file-not-exists": "Le fichier n'existe pas : %fileName%",
     "file-not-found": "Le fichier %fileName% non trouvé.",
     "file-not-supported": "Fichier non pris en charge",
+    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "Le fichier existe déjà : %filePath%",
     "filecache-clear": "Filecache effacé.",
     "filecache-delete-key-item": "Élément supprimé '%item%' de Filecache.",
@@ -663,6 +670,7 @@
     "group-by-year": "Grouper par année",
     "group-by-year-unixtime": "Grouper par année (temps UNIX)",
     "group-more-docs-p": "Si vous le souhaitez, vous pouvez grouper avec d'autres documents de ce client \/ fournisseur",
+    "group-name": "Nombre del Grupo",
     "group-or-split": "Grouper ou séparer",
     "group-or-split-p": "Cet assistant vous permet de générer un nouveau document à partir des lignes provenant d'autres documents. Sélectionnez les quantités que vous désirez utiliser, la date du nouveau document et cliquez sur le bouton Générer.",
     "grouping-type": "Groupe",
@@ -772,6 +780,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "Justifié",
+    "key-google-maps": "Clave de Google Maps",
     "keys": "clés",
     "lang-code": "Code de langue",
     "language": "Langue",
@@ -815,6 +824,7 @@
     "last-week": "Semaine dernière",
     "last-year": "Année dernière",
     "latitude": "Latitude",
+    "latitude-abb": "Lat",
     "ledger": "Quotidien",
     "left": "Gauche",
     "level": "Niveau",
@@ -856,6 +866,7 @@
     "logs": "Bûches",
     "long": "Longue",
     "longitude": "Longitude",
+    "longitude-abb": "Long",
     "look-for-gaps": "Buscar huecos",
     "lot": "Lot",
     "low-security": "Faible sécurité",
@@ -910,6 +921,7 @@
     "missing-file": "Fichier manquant",
     "missing-file-help": "Ce fichier semble manquer à votre installation. Même si vous n'en avez pas l'utilité, <em>vous ne devez pas le supprimer<\/em>.",
     "mobile": "Mobile",
+    "model": "Modelo",
     "model-not-found": "Modèle non trouvé : %model%",
     "monday": "Lundi",
     "month": "Mes",
@@ -985,6 +997,7 @@
     "notes": "Remarques",
     "notice": "Avis",
     "notices": "Avis",
+    "notification": "Notificación",
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Nombre",
@@ -1166,6 +1179,8 @@
     "rates": "Les taux",
     "re": "RE",
     "re-open": "Réouvrir",
+    "react": "Reaccionar",
+    "read-message-by": "Leído por %nick% el %date%",
     "read-more": "En savoir plus",
     "readonly": "Lecture seule",
     "rebuild": "Reconstituer",
@@ -1227,6 +1242,7 @@
     "reserved": "Réservé",
     "reset": "Réinitialiser les paramètres",
     "resource": "Ressource",
+    "respond": "Responder",
     "restore": "Restaurer",
     "restore-data": "Restaurer les données",
     "result": "Résultat",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "Qté sélectionnée",
     "selector-number": "Selector",
     "send": "Envoyer",
+    "send-audios": "Enviar audios",
+    "send-documents": "Enviar documentos",
+    "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
+    "send-location": "Enviar ubicación",
     "send-mail": "Evoyer e-mail",
     "send-mail-error": "Erreur lors de l'envoi de l'e-mail",
     "send-mail-ok": "L'e-mail a été envoyé avec succès",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Envió un audio",
+    "sent-a-document": "Envió un documento",
+    "sent-a-location": "Envió una ubicación",
+    "sent-a-picture": "Envió una imagen",
+    "sent-a-video": "Envió un video",
+    "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "Suffixe SEPA",
     "september": "Septiembre",
     "sequences": "Numérotations",
@@ -1514,6 +1541,7 @@
     "vehicle": "Véhicule",
     "verified": "vérifié",
     "version": "Version",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Entrepôt",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
     "working-hours": "Horario de trabajo",
+    "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Colonne X",
     "x-operation": "Opération sur X",
     "y-column": "Colonne Y",
@@ -1551,6 +1580,11 @@
     "yes": "Si",
     "yesterday": "Hier",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Vous devriez changer votre mot de passe",
     "your": "Votre",
     "zip-code": "Code postal",
