--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "Atributo valor 4",
     "attribute-values": "Valores de atributo",
     "attributes": "Atributos",
+    "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Clave da API non válida",
     "authentication": "Autenticación",
@@ -162,6 +163,7 @@
     "book": "Reservar",
     "box-closed-ok": "Caixa pechada correctamente",
     "boxes": "Cajas",
+    "browse": "Examinar",
     "business-name": "Razón social",
     "buy": "Mercar",
     "cache": "Caché",
@@ -208,6 +210,7 @@
     "channel": "Canal",
     "chart": "Gráfico",
     "charts": "Gráficos",
+    "chat": "Chat",
     "check-table": "Error ao comprobar a táboa '%tableName%'",
     "check-vies": "Comprobar VIES",
     "checked": "Comprobado",
@@ -216,6 +219,7 @@
     "choose-currency": "Elixe moeda",
     "choose-doc-type": "Seleccione o tipo de documento",
     "choose-employee": "Elixe empregado",
+    "choose-files": "Seleccionar arquivos",
     "choose-payment-method": "Elixe a forma de pago",
     "choose-serie": "Elixe serie",
     "choose-source": "Elixe a orixe",
@@ -566,10 +570,13 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
+    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nome de arquivo",
     "file-not-exists": "O arquivo non existe %fileName%",
     "file-not-found": "Arquivo  %fileName% non atopado.",
     "file-not-supported": "O ficheiro non é compatible",
+    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "Xa existe o arquivo: %filePath%",
     "filecache-clear": "Filecache limpo.",
     "filecache-delete-key-item": "Elemento eliminado '%item%' de Filecache.",
@@ -663,6 +670,7 @@
     "group-by-year": "Agrupar por ano",
     "group-by-year-unixtime": "Agrupar por ano (unixtime)",
     "group-more-docs-p": "Se o desexas podes agrupar xunto a outros documentos deste cliente\/proveedor",
+    "group-name": "Nome do Grupo",
     "group-or-split": "Agrupar ou partir",
     "group-or-split-p": "Este asistente permite xerar un novo documento a partir das liñas doutros. Seleccione as cantidades que desexa usar, a data do novo documento e pulse o botón xerar.",
     "grouping-type": "Agrupación",
@@ -772,6 +780,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "Xustificado",
+    "key-google-maps": "Clave de Google Maps",
     "keys": "Claves",
     "lang-code": "Código de idioma",
     "language": "Idioma",
@@ -815,6 +824,7 @@
     "last-week": "A semana pasada",
     "last-year": "O ano pasado",
     "latitude": "Latitude",
+    "latitude-abb": "Lat",
     "ledger": "Diario",
     "left": "Esquerda",
     "level": "Nivel",
@@ -856,6 +866,7 @@
     "logs": "Logs",
     "long": "Longo",
     "longitude": "Lonxitude",
+    "longitude-abb": "Long",
     "look-for-gaps": "Buscar ocos",
     "lot": "Lote",
     "low-security": "Baixa seguridade",
@@ -910,6 +921,7 @@
     "missing-file": "Falta o arquivo",
     "missing-file-help": "Parece que este arquivo non se atopa na túa instalación. Quizais non o uses, pero <em>non podes eliminalo<\/em>.",
     "mobile": "Móvil",
+    "model": "Modelo",
     "model-not-found": "Modelo non atopado",
     "monday": "Luns",
     "month": "Mes",
@@ -985,6 +997,7 @@
     "notes": "Notas",
     "notice": "Aviso",
     "notices": "Avisos",
+    "notification": "Notificación",
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
@@ -1166,6 +1179,8 @@
     "rates": "Taxas",
     "re": "RE",
     "re-open": "Reabrir",
+    "react": "Reaccionar",
+    "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Ler máis",
     "readonly": "Só lectura",
     "rebuild": "Reconstruir",
@@ -1227,6 +1242,7 @@
     "reserved": "Reservado",
     "reset": "Configuración reiniciada correctamente.",
     "resource": "Recurso",
+    "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
     "result": "Resultado",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "Cantidade seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-audios": "Enviar audios",
+    "send-documents": "Enviar documentos",
+    "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
+    "send-location": "Enviar ubicación",
     "send-mail": "Enviar correo",
     "send-mail-error": "Error ao enviar o email",
     "send-mail-ok": "Email enviado correctamente",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Envió un audio",
+    "sent-a-document": "Envió un documento",
+    "sent-a-location": "Envió una ubicación",
+    "sent-a-picture": "Envió una imagen",
+    "sent-a-video": "Envió un video",
+    "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sufixo SEPA",
     "september": "Septiembre",
     "sequences": "Secuencias",
@@ -1514,6 +1541,7 @@
     "vehicle": "Vehículo",
     "verified": "verificado",
     "version": "Versión",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal ou neto",
     "warehouse": "Almacén",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Cubra este formulario sobre o seu negocio para rematar a configuración.",
     "wizard-plugins": "Un plugin é un complemento que engade novas funcionalidades. Selecciona os plugins que queras activar de inmediato, ou faino máis tarde dende o panel de control.",
     "working-hours": "Horario de trabajo",
+    "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
     "y-column": "Columna I",
@@ -1551,6 +1580,11 @@
     "yes": "Si",
     "yesterday": "Onte",
     "you-cant-delete-primary-variant": "Non podes eliminar a variante principal do produto",
+    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Debería cambiar o seu contrasinal",
     "your": "seu",
     "zip-code": "Código postal",
