--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "attribute-value-4",
     "attribute-values": "Attribute values",
     "attributes": "Atributos",
+    "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "authentication",
@@ -162,6 +163,7 @@
     "book": "Reserve",
     "box-closed-ok": "Box closed correctly",
     "boxes": "Cajas",
+    "browse": "Examinar",
     "business-name": "Nome da empresa",
     "buy": "Comprar",
     "cache": "Cache",
@@ -208,6 +210,7 @@
     "channel": "channel",
     "chart": "Chart",
     "charts": "charts",
+    "chat": "Chat",
     "check-table": "Erro ao verificar a tabela '0'",
     "check-vies": "Comprobar VIES",
     "checked": "Checado",
@@ -216,6 +219,7 @@
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
     "choose-employee": "Choose employee",
+    "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
     "choose-source": "Choose source",
@@ -566,10 +570,13 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
+    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nome do ficheiro",
     "file-not-exists": "O Ficheiro não existe: %fileName%",
     "file-not-found": "O arquivo 0 não foi encontrado.",
     "file-not-supported": "Arquivo não suportado",
+    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "O ficheiro já existe: %filePath%",
     "filecache-clear": "Filecache desmarcada.",
     "filecache-delete-key-item": "Elemento eliminado '0' da Filecache.",
@@ -663,6 +670,7 @@
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "group-by-year-unixtime",
     "group-more-docs-p": "group-more-docs-p",
+    "group-name": "Nombre del Grupo",
     "group-or-split": "Group or split",
     "group-or-split-p": "group-or-split-p",
     "grouping-type": "Agrupación",
@@ -772,6 +780,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "justified",
+    "key-google-maps": "Clave de Google Maps",
     "keys": "keys",
     "lang-code": "Código de idioma",
     "language": "Língua",
@@ -815,6 +824,7 @@
     "last-week": "last-week",
     "last-year": "Último ano",
     "latitude": "Latitude",
+    "latitude-abb": "Lat",
     "ledger": "Ledger",
     "left": "Left",
     "level": "Level",
@@ -856,6 +866,7 @@
     "logs": "Logs",
     "long": "Longo",
     "longitude": "Longitude",
+    "longitude-abb": "Long",
     "look-for-gaps": "Buscar huecos",
     "lot": "Muito",
     "low-security": "Baixa Segurança",
@@ -910,6 +921,7 @@
     "missing-file": "Missing file",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "mobile",
+    "model": "Modelo",
     "model-not-found": "model-not-found",
     "monday": "segunda-feira",
     "month": "Mes",
@@ -985,6 +997,7 @@
     "notes": "Notas",
     "notice": "Aviso",
     "notices": "Avisos",
+    "notification": "Notificación",
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
@@ -1166,6 +1179,8 @@
     "rates": "Preços",
     "re": "RE",
     "re-open": "re-open",
+    "react": "Reaccionar",
+    "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "readonly",
     "rebuild": "rebuild",
@@ -1227,6 +1242,7 @@
     "reserved": "Reserved",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
     "resource": "Resource",
+    "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
     "result": "Result",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "approve-quantity",
     "selector-number": "Selector",
     "send": "send",
+    "send-audios": "Enviar audios",
+    "send-documents": "Enviar documentos",
+    "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
+    "send-location": "Enviar ubicación",
     "send-mail": "Enviar email",
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "send-mail-ok",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Envió un audio",
+    "sent-a-document": "Envió un documento",
+    "sent-a-location": "Envió una ubicación",
+    "sent-a-picture": "Envió una imagen",
+    "sent-a-video": "Envió un video",
+    "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
     "sequences": "sequences",
@@ -1514,6 +1541,7 @@
     "vehicle": "Vehículo",
     "verified": "verified",
     "version": "Versão",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Armazém",
@@ -1541,6 +1569,7 @@
     "wizard-p": "wizard-p",
     "wizard-plugins": "wizard-plugins",
     "working-hours": "Horario de trabajo",
+    "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "x-operation",
     "y-column": "y-column",
@@ -1551,6 +1580,11 @@
     "yes": "Sim",
     "yesterday": "Ontem",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "you-should-change-passwd",
     "your": "your",
     "zip-code": "Código postal",
