--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "Atribut 4",
     "attribute-values": "Valors d'atribut",
     "attributes": "Atributs",
+    "audio": "Àudio",
     "august": "Agost",
     "auth-token-invalid": "Clau de API no vàlida",
     "authentication": "Autenticació",
@@ -162,6 +163,7 @@
     "book": "Reservar",
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
+    "browse": "Examinar",
     "business-name": "Raó Social",
     "buy": "Comprar",
     "cache": "Caché",
@@ -208,6 +210,7 @@
     "channel": "Canal",
     "chart": "Gràfic",
     "charts": "Gràfiques",
+    "chat": "Xat",
     "check-table": "Error en comprovar la taula '%tableName%'",
     "check-vies": "Comprovar VIES",
     "checked": "Comprovat",
@@ -216,6 +219,7 @@
     "choose-currency": "Tria la moneda",
     "choose-doc-type": "Tria el tipus de document",
     "choose-employee": "Tria l'empleat",
+    "choose-files": "Seleccionar fitxers",
     "choose-payment-method": "Tria el mitjà de pagament",
     "choose-serie": "Tria la sèrie",
     "choose-source": "Triar l'origen",
@@ -566,10 +570,13 @@
     "field-required": "Camp requerit: %field%",
     "fields": "Camps",
     "file": "Fitxer",
+    "file-extension-not-accepted": "Error en enviar el fitxer %fileName% perquè la vostra extensió no està permesa. Les extensions permeses són: %accepted%",
     "file-name": "Nom d'arxiu",
     "file-not-exists": "No existeix el fitxer: %fileName%",
     "file-not-found": "Fitxer %fileName% no trobat.",
     "file-not-supported": "Fitxer no suportat",
+    "file-size-error": "Error en enviar el fitxer %fileName% perquè supera la mida màxima permesa de %maxSize% MB",
+    "file-type-error": "Error en enviar el fitxer de tipus %typeFile%. Els tipus admesos són: àudio, document, imatge i vídeo.",
     "file-yet-exists": "Ja existeix el fitxer: %filePath%",
     "filecache-clear": "Filecache netejada.",
     "filecache-delete-key-item": "Element eliminat '%item%' de Filecache.",
@@ -663,6 +670,7 @@
     "group-by-year": "Agrupar per any",
     "group-by-year-unixtime": "Agrupar per any (unixtime)",
     "group-more-docs-p": "Si vols pots agrupar al costat d'altres documents d'aquest client \/ proveïdor",
+    "group-name": "Nom del Grup",
     "group-or-split": "Agrupar o dividir",
     "group-or-split-p": "Aquest assistent permet generar un nou document a partir de les línies d'altres. Seleccioneu les quantitats que voleu utilitzar, la data del nou document i premi el botó generar.",
     "grouping-type": "Agrupació",
@@ -772,6 +780,7 @@
     "july": "Juliol",
     "june": "Juny",
     "justified": "Justificat",
+    "key-google-maps": "Clau de Google Maps",
     "keys": "Claus",
     "lang-code": "Codi d'idioma",
     "language": "Llenguatge",
@@ -815,6 +824,7 @@
     "last-week": "La setmana passada",
     "last-year": "L'any passat",
     "latitude": "Latitud",
+    "latitude-abb": "Lat",
     "ledger": "Diari",
     "left": "Esquerra",
     "level": "Nivell",
@@ -856,6 +866,7 @@
     "logs": "Logs",
     "long": "Llarg",
     "longitude": "Longitud",
+    "longitude-abb": "Long",
     "look-for-gaps": "Cerca forats",
     "lot": "Lot",
     "low-security": "Baixa Seguretat",
@@ -910,6 +921,7 @@
     "missing-file": "Falta el fitxer",
     "missing-file-help": "Sembla que aquest arxiu no es troba en la instal·lació. Potser no el facis servir, però <em>no pots eliminar-lo<\/em>.",
     "mobile": "mòbil",
+    "model": "Model",
     "model-not-found": "Model no trobat",
     "monday": "Dilluns",
     "month": "Mes",
@@ -985,6 +997,7 @@
     "notes": "Notes",
     "notice": "Avís",
     "notices": "Avisos",
+    "notification": "Notificació",
     "notifications": "Notificacions",
     "november": "Novembre",
     "number": "Número",
@@ -1166,6 +1179,8 @@
     "rates": "Tarifes",
     "re": "RE",
     "re-open": "Reobrir",
+    "react": "Reaccionar",
+    "read-message-by": "Llegit per %nick% el %date%",
     "read-more": "Llegir més",
     "readonly": "Només lectura",
     "rebuild": "Reconstruir",
@@ -1227,6 +1242,7 @@
     "reserved": "Reservat",
     "reset": "La configuració s'ha reiniciat correctament.",
     "resource": "Recurs",
+    "respond": "Respondre",
     "restore": "Restaurar",
     "restore-data": "Restaura les dades",
     "result": "Resultat",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "Quant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-audios": "Enviar àudios",
+    "send-documents": "Enviar documents",
+    "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
+    "send-location": "Enviar ubicació",
     "send-mail": "Enviar correu",
     "send-mail-error": "S'ha produït un error en enviar el correu electrònic",
     "send-mail-ok": "Correu enviat",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Va enviar un àudio",
+    "sent-a-document": "Va enviar un document",
+    "sent-a-location": "Va enviar una ubicació",
+    "sent-a-picture": "Va enviar una imatge",
+    "sent-a-video": "Va enviar un vídeo",
+    "sent-message-by": "Enviat per %nick% el %date%",
     "sepa-suffix": "Sufix SEPA",
     "september": "Setembre",
     "sequences": "Seqüències",
@@ -1514,6 +1541,7 @@
     "vehicle": "Vehicle",
     "verified": "Verificat",
     "version": "Versió",
+    "video": "Vídeo",
     "vies-check-success": "El número '%vat-*number%' està registrat en el sistema VIES",
     "view-column-net-subtotal": "Veure columna subtotal o net",
     "warehouse": "Magatzem",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Empleni aquest formulari sobre el seu negoci per a acabar la configuració.",
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
     "working-hours": "Horari de treball",
+    "write-a-message-here": "Escriu un missatge aquí",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
     "y-column": "Columna Y",
@@ -1551,6 +1580,11 @@
     "yes": "Sí",
     "yesterday": "Ahir",
     "you-cant-delete-primary-variant": "No pots eliminar la variant principal del producte",
+    "you-sent-a-audio": "Vas enviar un àudio",
+    "you-sent-a-document": "Vas enviar un document",
+    "you-sent-a-location": "Vas enviar una ubicació",
+    "you-sent-a-picture": "Vas enviar una imatge",
+    "you-sent-a-video": "Vas enviar un vídeo",
     "you-should-change-passwd": "Hauria de canviar la seva contrasenya",
     "your": "El vostre",
     "zip-code": "Codi Postal",
