--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "Attributwert 4",
     "attribute-values": "Attributwerte",
     "attributes": "Attribute",
+    "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "Authentifizierung",
@@ -162,6 +163,7 @@
     "book": "reservieren",
     "box-closed-ok": "Karton richtig geschlossen",
     "boxes": "Cajas",
+    "browse": "Examinar",
     "business-name": "Firmenname",
     "buy": "Kaufen",
     "cache": "Cache-Speicher",
@@ -208,6 +210,7 @@
     "channel": "Kanal",
     "chart": "Grafik",
     "charts": "Grafiken",
+    "chat": "Chat",
     "check-table": "Fehlerprüfung Tabelle %1$s",
     "check-vies": "Comprobar VIES",
     "checked": "geprüft",
@@ -216,6 +219,7 @@
     "choose-currency": "Währung auswählen",
     "choose-doc-type": "Dokumenttyp auswählen",
     "choose-employee": "Mitarbeiter auswählen",
+    "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Zahlungsmethode auswählen",
     "choose-serie": "Serie auswählen",
     "choose-source": "Ursprung wählen",
@@ -566,10 +570,13 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "archivieren",
+    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Dateiname",
     "file-not-exists": "File not exists: %fileName%",
     "file-not-found": "Die Datei %1$s nicht gefunden.",
     "file-not-supported": "Datei wird nicht unterstützt",
+    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "Datei existiert bereits: %filePath%",
     "filecache-clear": "Filecache gelöscht.",
     "filecache-delete-key-item": "Das Element '0' wurde aus dem Filecache gelöscht.",
@@ -663,6 +670,7 @@
     "group-by-year": "nach Jahr gruppieren",
     "group-by-year-unixtime": "nach Jahr gruppieren (unixtime)",
     "group-more-docs-p": "Sie können es mit anderen Dokumenten dieses Kunden \/ Lieferanten gruppieren",
+    "group-name": "Nombre del Grupo",
     "group-or-split": "gruppieren oder trennen",
     "group-or-split-p": "Mit diesem Assistenten können Sie ausgehend von den Zeilen anderer ein neues Dokument generieren. Wählen Sie die Mengen aus, die Sie verwenden möchten, das Datum des neuen Dokuments und klicken Sie auf die Knopf Generieren.",
     "grouping-type": "Agrupación",
@@ -772,6 +780,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "justified",
+    "key-google-maps": "Clave de Google Maps",
     "keys": "Schlüssel",
     "lang-code": "Sprachcode",
     "language": "Sprache:",
@@ -815,6 +824,7 @@
     "last-week": "Letzte Woche",
     "last-year": "Letztes Jahr",
     "latitude": "Breite",
+    "latitude-abb": "Lat",
     "ledger": "täglich",
     "left": "Links",
     "level": "Level",
@@ -856,6 +866,7 @@
     "logs": "Logs",
     "long": "Lange",
     "longitude": "Längengrad",
+    "longitude-abb": "Long",
     "look-for-gaps": "Buscar huecos",
     "lot": "Menge",
     "low-security": "Low security",
@@ -910,6 +921,7 @@
     "missing-file": "Missing file",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "mobile",
+    "model": "Modelo",
     "model-not-found": "Modell nicht gefunden: %model%",
     "monday": "Montag",
     "month": "Mes",
@@ -985,6 +997,7 @@
     "notes": "Anmerkungen",
     "notice": "Aviso",
     "notices": "Bemerkungen",
+    "notification": "Notificación",
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Nummer",
@@ -1166,6 +1179,8 @@
     "rates": "Preise",
     "re": "RE",
     "re-open": "re-open",
+    "react": "Reaccionar",
+    "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "readonly",
     "rebuild": "rebuild",
@@ -1227,6 +1242,7 @@
     "reserved": "Reserviert",
     "reset": "Einstellungen erfolgreich zurückgesetzt, drücken Sie <a href=\" %1$s#avanzado\">hier<\/a> um fortzusetzen.",
     "resource": "Ressource",
+    "respond": "Responder",
     "restore": "restore",
     "restore-data": "Daten wiederherstellen",
     "result": "Result",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "approve-quantity",
     "selector-number": "Selector",
     "send": "send",
+    "send-audios": "Enviar audios",
+    "send-documents": "Enviar documentos",
+    "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
+    "send-location": "Enviar ubicación",
     "send-mail": "Send mail",
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "send-mail-ok",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Envió un audio",
+    "sent-a-document": "Envió un documento",
+    "sent-a-location": "Envió una ubicación",
+    "sent-a-picture": "Envió una imagen",
+    "sent-a-video": "Envió un video",
+    "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
     "sequences": "sequences",
@@ -1514,6 +1541,7 @@
     "vehicle": "Fahrzeug",
     "verified": "geprüft",
     "version": "Version",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Warenhaus",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
     "working-hours": "Horario de trabajo",
+    "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Spalte X",
     "x-operation": "Operation X",
     "y-column": "Spalte Y",
@@ -1551,6 +1580,11 @@
     "yes": "wenn",
     "yesterday": "Gestern",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Sie sollten Ihr Password ändern",
     "your": "Ihr",
     "zip-code": "Postleitzahl",
