--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "4. ezaugarria",
     "attribute-values": "Atributu balioak",
     "attributes": "Atributuak",
+    "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "Autentifikazioa",
@@ -162,6 +163,7 @@
     "book": "Erreserbatu",
     "box-closed-ok": "Kutxa ondo itxita",
     "boxes": "Kutxak",
+    "browse": "Examinar",
     "business-name": "Enpresaren izena",
     "buy": "Erosi",
     "cache": "Cache",
@@ -208,6 +210,7 @@
     "channel": "Kanala",
     "chart": "Grafikoa",
     "charts": "Irudikapenak",
+    "chat": "Chat",
     "check-table": "Errorea '%tableName%' taula egiaztatzean",
     "check-vies": "VIES egiaztatu",
     "checked": "Egiaztatua",
@@ -216,6 +219,7 @@
     "choose-currency": "Aukeratu txanpona",
     "choose-doc-type": "Aukeratu dokumentu mota",
     "choose-employee": "Aukeratu langilea",
+    "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Aukeratu ordainketa mota",
     "choose-serie": "Aukeratu seriea",
     "choose-source": "Jatorria aukeratu",
@@ -566,10 +570,13 @@
     "field-required": "Beharrezko eremua: %field%",
     "fields": "Eremuak",
     "file": "Artxiboa",
+    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Artxiboaren izena",
     "file-not-exists": "%fileName% artxiboa ez da existitzen",
     "file-not-found": "%fileName% artxiboa ez da aurkitu.",
     "file-not-supported": "Artxiboa ez da onartzen",
+    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "%filePath% artxiboa existitzen da dagoeneko",
     "filecache-clear": "Filecache garbituta.",
     "filecache-delete-key-item": "Filecache-tik '%item%' elementua ezabatu da.",
@@ -663,6 +670,7 @@
     "group-by-year": "Urteka taldekatu",
     "group-by-year-unixtime": "Urteka taldekatu (unixtime)",
     "group-more-docs-p": "Nahi ba duzu bezero\/hornitzaile honen dokumentuekin batera bildu ahal duzu",
+    "group-name": "Taldearen izena",
     "group-or-split": "Elkartu edo zaitu",
     "group-or-split-p": "Laguntzaile honek beste dokumentu batzuetatik dokumentu berria sortzeko aukera ematen du. Hautatu erabili nahi dituzun kantitateak, dokumentu berriaren data eta sakatu sortu botoia.",
     "grouping-type": "Taldea",
@@ -772,6 +780,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "Justifikatuta",
+    "key-google-maps": "Clave de Google Maps",
     "keys": "Gakoak",
     "lang-code": "Hizkuntza kodea",
     "language": "Hizkuntza",
@@ -815,6 +824,7 @@
     "last-week": "Aurreko astean",
     "last-year": "Iaz",
     "latitude": "Latitudea",
+    "latitude-abb": "Lat",
     "ledger": "Egunero",
     "left": "Ezkerra",
     "level": "Maila",
@@ -856,6 +866,7 @@
     "logs": "Log-ak",
     "long": "Luzea",
     "longitude": "Luzera",
+    "longitude-abb": "Long",
     "look-for-gaps": "Hutsuneak bilatu",
     "lot": "Lotea",
     "low-security": "Segurtasun gutxi",
@@ -910,6 +921,7 @@
     "missing-file": "Fitxategia falta da",
     "missing-file-help": "Badirudi fitxategi hau ez dagoela zure instalazioan.  Beharbada ez duzu erabiliko, baina <em>ezin duzu ezabatu<\/em>.",
     "mobile": "Mugikorra",
+    "model": "Modelo",
     "model-not-found": "Modeloa ez da aurkitu: %model%",
     "monday": "Astelehena",
     "month": "Hilabetea",
@@ -985,6 +997,7 @@
     "notes": "Oharrak",
     "notice": "Oharra",
     "notices": "Oharrak",
+    "notification": "Jakinarazpena",
     "notifications": "Jakinarazpenak",
     "november": "Noviembre",
     "number": "Zenbakia",
@@ -1166,6 +1179,8 @@
     "rates": "Tarifak",
     "re": "BE",
     "re-open": "Berriz ireki",
+    "react": "Reaccionar",
+    "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Gehiago irakurri",
     "readonly": "Irakurri bakarrik",
     "rebuild": "Berregin",
@@ -1227,6 +1242,7 @@
     "reserved": "Gordeta",
     "reset": "Berrezarri",
     "resource": "Baliabidea",
+    "respond": "Responder",
     "restore": "Berrezarri",
     "restore-data": "Datuak berreskuratu",
     "result": "Emaitza",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "Hautatutako kantitatea",
     "selector-number": "Selector",
     "send": "Bidali",
+    "send-audios": "Enviar audios",
+    "send-documents": "Enviar documentos",
+    "send-images": "Enviar imágenes",
     "send-invoices": "Fakturak bidali",
+    "send-location": "Enviar ubicación",
     "send-mail": "Emaila bidali",
     "send-mail-error": "Errorea posta elektronikoa bidaltzean",
     "send-mail-ok": "Posta ondo bidalia",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Envió un audio",
+    "sent-a-document": "Envió un documento",
+    "sent-a-location": "Envió una ubicación",
+    "sent-a-picture": "Envió una imagen",
+    "sent-a-video": "Envió un video",
+    "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "SEPA atzizkia",
     "september": "Septiembre",
     "sequences": "Sekuentziak",
@@ -1514,6 +1541,7 @@
     "vehicle": "Ibilgailua",
     "verified": "Egiaztatua",
     "version": "Bertsioa",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Zutabean azpi-totala edo garbia ikusi",
     "warehouse": "Biltegia",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Bete zure negozioari buruzko inprimaki hau konfigurazioa amaitzeko.",
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
     "working-hours": "Horario de trabajo",
+    "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "X zutabea",
     "x-operation": "X-n eragiketa",
     "y-column": "Y zutabea",
@@ -1551,6 +1580,11 @@
     "yes": "Bai",
     "yesterday": "Atzo",
     "you-cant-delete-primary-variant": "Ezin duzu produktuaren aldaera nagusia kendu",
+    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Zure pasahitza aldatu beharko zenuen",
     "your": "Zure",
     "zip-code": "Posta Kodea",
