--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -123,6 +123,7 @@
     "attribute-value-4": "Atribut 4",
     "attribute-values": "Valors de l'atribut",
     "attributes": "Atributs",
+    "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Calu API no vàlida",
     "authentication": "Autenticació",
@@ -162,6 +163,7 @@
     "book": "Reservar",
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
+    "browse": "Examinar",
     "business-name": "Raó social",
     "buy": "Comprar",
     "cache": "Caché",
@@ -208,6 +210,7 @@
     "channel": "Canal",
     "chart": "Gràfic",
     "charts": "Gràfiques",
+    "chat": "Chat",
     "check-table": "Erro al comprovar la taula '%tableName%'",
     "check-vies": "Comprobar VIES",
     "checked": "Comprovat",
@@ -216,6 +219,7 @@
     "choose-currency": "Selecciona la moneda",
     "choose-doc-type": "Seleccionar el tipo de document",
     "choose-employee": "Selecciona l'empleat",
+    "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Selecciona la forma de pagament",
     "choose-serie": "Selecciona la série",
     "choose-source": "Selecciona l'orige",
@@ -566,10 +570,13 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Fitxer",
+    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nom de l'archiu",
     "file-not-exists": "L'archiu %fileName% no existix",
     "file-not-found": "L'archiu %fileName% no s'ha trobat.",
     "file-not-supported": "Fitxer no soportat",
+    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "El fitxer %filePath% ja existeix",
     "filecache-clear": "Filecache netejada.",
     "filecache-delete-key-item": "L'element '%item%' s'ha borrat de Filecache.",
@@ -663,6 +670,7 @@
     "group-by-year": "Agrupar per any",
     "group-by-year-unixtime": "Agrupar per any (unixtime)",
     "group-more-docs-p": "group-more-docs-p",
+    "group-name": "Nombre del Grupo",
     "group-or-split": "Agrupar o dividir",
     "group-or-split-p": "Aquest assistent permet generar un nou document a partir de les línies d'uns altres. Seleccione les quantitats que desitja usar, la data del nou document i prema el botó generar.",
     "grouping-type": "Agrupación",
@@ -772,6 +780,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "justified",
+    "key-google-maps": "Clave de Google Maps",
     "keys": "Claus",
     "lang-code": "Còdic de l'idioma",
     "language": "Idioma",
@@ -815,6 +824,7 @@
     "last-week": "La semana passada",
     "last-year": "L'any passat",
     "latitude": "Latitut",
+    "latitude-abb": "Lat",
     "ledger": "Diari",
     "left": "Esquerra",
     "level": "Nivell",
@@ -856,6 +866,7 @@
     "logs": "Registres",
     "long": "Llarc",
     "longitude": "Llongitut",
+    "longitude-abb": "Long",
     "look-for-gaps": "Buscar huecos",
     "lot": "Lot",
     "low-security": "Seguritat baixa",
@@ -910,6 +921,7 @@
     "missing-file": "Falta el fitxer",
     "missing-file-help": "Pareix que este fitxer no està en la teua instalació. Potser no l'uses, pero <em>no el pots borrar<\/em>.",
     "mobile": "mobile",
+    "model": "Modelo",
     "model-not-found": "El model %model% no s'ha trobat",
     "monday": "monday",
     "month": "Mes",
@@ -985,6 +997,7 @@
     "notes": "Notes",
     "notice": "Aviso",
     "notices": "Avisos",
+    "notification": "Notificación",
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
@@ -1166,6 +1179,8 @@
     "rates": "Tarifes",
     "re": "RE",
     "re-open": "Reobrir",
+    "react": "Reaccionar",
+    "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Només lectura",
     "rebuild": "Reconstruir",
@@ -1227,6 +1242,7 @@
     "reserved": "Reservat",
     "reset": "La configuració s'ha reiniciat correctament.",
     "resource": "Recurs",
+    "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar senyes",
     "result": "Resultat",
@@ -1263,10 +1279,21 @@
     "selected-quantity": "Quant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-audios": "Enviar audios",
+    "send-documents": "Enviar documentos",
+    "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
+    "send-location": "Enviar ubicación",
     "send-mail": "Enviar el correu",
     "send-mail-error": "Hi ha hagut un erro a l'enviar el correu",
     "send-mail-ok": "El correu s'ha enviar correctament",
+    "send-videos": "Enviar vídeos",
+    "sent-a-audio": "Envió un audio",
+    "sent-a-document": "Envió un documento",
+    "sent-a-location": "Envió una ubicación",
+    "sent-a-picture": "Envió una imagen",
+    "sent-a-video": "Envió un video",
+    "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "Sufix SEPA",
     "september": "Septiembre",
     "sequences": "Sequències",
@@ -1514,6 +1541,7 @@
     "vehicle": "Vehículo",
     "verified": "Verificat",
     "version": "Versió",
+    "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Magatzem",
@@ -1541,6 +1569,7 @@
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
     "working-hours": "Horario de trabajo",
+    "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
     "y-column": "Columna Y",
@@ -1551,6 +1580,11 @@
     "yes": "Sí",
     "yesterday": "Ahir",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Deuries canviar la teua contrasenya",
     "your": "seu",
     "zip-code": "Codi postal",
