--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -472,7 +472,7 @@
     "email": "Email",
     "email-bcc": "Email con copia oculta",
     "email-cc": "Email con copia",
-    "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, panel de control, preferencias de aplicación.",
+    "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, emals.",
     "email-not-sent": "No enviado.",
     "email-notification": "Notificación por email",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
